--- a/onboard_2024_front/src/app/logo/logo.component.scss
+++ b/onboard_2024_front/src/app/logo/logo.component.scss
@@ -4,7 +4,14 @@
 // Logo Styles
 // **************************
 :host {
-    display: block;
-    max-width: 100%; 
-    height: auto;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+
+svg {
+    width: 100%;
+    height: 100%;
 }
